--- a/src/index.css
+++ b/src/index.css
@@ -4,18 +4,53 @@ body {
 }
 
 .selectedAnswer {
-    color: chartreuse;
+    margin: 5px;
+    padding: 10px;
+    background-color: gray;
+    border: 1px;
+    border-radius: 5px;
+}
+
+.notSelectedAnswer {
+    margin: 5px;
+    padding: 10px;
+    background-color: lightgray;
+    border: 1px;
+    border-radius: 5px;
 }
 
 .incorrectAnswer {
-    color: red;
-    
+    margin: 5px;
+    padding: 10px;
+    background-color: lightgray;
+    border: 1px;
+    border-radius: 5px;
 }
 
-.asnwer {
-    display: inline;
+.answerTextCorrect {
+    color: darkgreen;
+}
+
+.answerTextIncorrect {
+    color: red;
+}
+
+.answerTextUnknown {
+    color: black;
+}
+
+.answerList {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 .notSelectedAnswer {
     color: black;
+}
+
+button {
+    font-size: 16px;
+    padding: 3px;
+    margin: 3px;
 }
