--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,12 @@ body {
 }
 
 button {
-    font-size: 16px;
-    padding: 3px;
-    margin: 3px;
+    font-size: 18px;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+.categoryBtn {
+    width: 100%;
 }
